<resources>
    <string name="app_name">PhotomApp</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="signIn_hint">Регистрация</string>
    <string name="login_et_hint">Логин</string>
    <string name="email_et_hint">Email</string>
    <string name="name_et_hint">Имя</string>
    <string name="password_et_hint">Пароль</string>
    <string name="ok_btn_insc">OK</string>
    <string name="cancel_btn_insc">Отмена</string>
    <string name="hashtag">#%s</string>

    <!--Filter-->
    <string name="meat_title">Мясо</string>
    <string name="fish_title">Рыба</string>
    <string name="vegetables_title">Овощи</string>
    <string name="fruit_title">Фрукты</string>
    <string name="cheese_title">Сыр</string>
    <string name="drinks_title">Напитки</string>
    <string name="dessert_title">Десерты</string>
    <string name="hot_temperature_title">Горячая</string>
    <string name="comfort_temperature_title">Комнатная</string>
    <string name="cold_temperature_title">Холодная</string>
    <string name="natural_light_title">Естественный</string>
    <string name="synthetic_light_title">Искусственный</string>
    <string name="mixed_light_title">Смешанный</string>
    <string name="dir_front_light_title">Прямой</string>
    <string name="dir_back_light_title">Контровой</string>
    <string name="dir_side_light_title">Боковой</string>
    <string name="dir_mixed_light_title">Смешанный</string>
    <string name="three_light_count_title">Три</string>
    <string name="two_light_count_title">Два</string>
    <string name="one_light_count_title">Один</string>

    <string name="red">Красный</string>
    <string name="blue">Голубой</string>
    <string name="green">Зеленый</string>
    <string name="yellow">Желтый</string>
    <string name="orange">Оранжевый</string>
    <string name="white">Белый</string>
    <string name="black">чёрный</string>
    <string name="brown">Коричневый</string>
    <string name="purple">Фиолетовый</string>
    <string name="navy_blue">Синий</string>
    <string name="normal">Обычное</string>
    <string name="normal_decor">Обычное</string>
    <string name="festive_decor">Праздничное</string>

    <string name="new_album">Новый альбом</string>
    <string name="okay">Ок</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="desc_album">Описание</string>
    <string name="albums">Альбомы</string>
    <string name="cards">Карты</string>

    <string name="search">Поиск</string>
    <string name="tags">Теги</string>
    <string name="filters">Фильтры</string>

    <string name="hash_tag">#%s</string>

    <string name="download_photo">Загрузить</string>
    <string name="title_profile">Профиль</string>
</resources>
