<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Вход в аккаунт"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/email_error_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="2dp"/>

    <EditText
        android:id="@+id/email_et"
        style="@style/EditTextStyle"
        android:hint="@string/email_et_hint"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/password_et"/>

    <TextView
        android:id="@+id/password_error_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="2dp"/>
    <EditText
        android:id="@+id/password_et"
        style="@style/EditTextStyle"
        android:hint="@string/password_et_hint"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/sign_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:text="@string/ok_btn_insc"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/button_background"
            android:text="@string/cancel_btn_insc"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>